# RuneTalk

./: README.md
Runetalk/: .gitignore  Cargo.toml
Runetalk/config/: config.example.yaml
Runetalk/migrations/: 20260603152715_001_adventurers.down.sql  20260603152715_001_adventurers.up.sql  20260603152726_002_guilds.up.sql  20260603152737_003_guild_members.up.sql  20260603152746_004_rifts.down.sql  20260603152757_005_echoes.down.sql  20260603152757_005_echoes.up.sql  20260603152811_007_whispers.up.sql  20260603152825_008_presence.down.sql  20260603152825_008_presence.up.sql  20260605034312_009_alies.down.sql  20260605034312_009_alies.up.sql  20260605034534_011_indexes.up.sql
Runetalk/src/: app.rs  lib.rs  main.rs  state.rs
Runetalk/src/common/: get_uuid.rs  mod.rs  response.rs
Runetalk/src/config/: config.rs  db.rs  mod.rs  redis.rs
Runetalk/src/entity/: adventurer.rs  ally.rs  enums.rs  guild.rs  guild_member.rs  mod.rs  presence.rs  scroll.rs
Runetalk/src/errors/: adventurer_error.rs  app_error.rs  auth_error.rs  config_error.rs  db_error.rs  email_error.rs  guild_error.rs  hash_error.rs  jwt_error.rs  message_error.rs  mod.rs  social_error.rs  task_error.rs
Runetalk/src/middleware/: auth.rs  method_not_allowed.rs
Runetalk/src/model/: config_model.rs
Runetalk/src/modules/: mod.rs
Runetalk/src/modules/auth/: dto.rs  handler.rs  repository.rs  service.rs
Runetalk/src/modules/graphql/: dto.rs  handler.rs  mod.rs  query.rs  schema.rs  service.rs
Runetalk/src/routes/: auth_route.rs  mod.rs  protected.rs
Runetalk/src/testing/: fixtures.rs  mod.rs  noop.rs  router.rs
Runetalk/src/utils/: hash.rs  invite_code.rs  jwt.rs  mod.rs  smtp.rs
(+82 files in other folders)
