[package]
name = "runetalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["multipart", "macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-test = "20.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.23"
futures = "0.3.32"
http = "1.4.0"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
rand = "0.10.1"
redis = { version = "1.2.2", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-native-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
tracing-opentelemetry = "0.33"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
async-trait = "0.1.89"
mockall = "0.14.0"
sqlx-cli = "0.9.0"
